--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,20 +1,4 @@
 /** Custom CSS */
-* {
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-}
-
-.logo {
-  float: left;
-  margin: 0;
-  padding: 0;
-  height: 50px;
-  content: url(../public/media/img/misc/logocut.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  z-index: 1;
-}
 .main__bg {
   background: #000;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/public/media/img/misc/bg.jpg");
@@ -24,6 +8,6 @@
   background-attachment: fixed;
   background-position-y: 15%;
   height: 100dvh;
-  color: #f8f8f8;
+  /* color: #f8f8f8; */
   text-align: center;
 }
